--- a/style.scss
+++ b/style.scss
@@ -90,11 +90,18 @@ body {
 /*2я СЕКЦИЯ*/
 .coverage {
   position: relative;
-  padding: 180px 0;
+  padding: 180px 0 30px;
   background-color: #fff;
   text-align: center;
 
   // Фоновая карта
+  &__bg-none {
+    padding: 115px 0 114px!important;
+    background: #F7FBFF!important;
+    &::before {
+      background:transparent!important;
+    }
+  }
   &::before {
     content: '';
     position: absolute;
@@ -130,6 +137,7 @@ body {
   }
 
   .info-card {
+    height: 100%;
     background: #fff;
     border-radius: 16px;
     position: relative;
@@ -144,8 +152,10 @@ body {
     }
 
     p {
-      font-size: 16px;
+      line-height: 133%;
+      font-size: 18px;
       margin-top: 8px;
+      color: #858585;
     }
     .icon {
       width: 56px;
@@ -168,10 +178,12 @@ body {
 }
 /*3я СЕКЦИЯ feature*/
 .features {
-  padding: 0px 0;
+  padding: 100px 0;
   background-color: #fff;
   text-align: center;
-
+  &__bg {
+    background-color: #F7FBFF!important;
+  }
   h2 {
     font-size: 50px;
     font-weight: 800;
@@ -196,10 +208,13 @@ body {
     position: relative;
 
     h5 {
-      font-weight: 700;
-      font-size: 18px;
+
       margin-top: 20px;
       margin-bottom: 15px;
+      font-weight: 600;
+      font-size: 24px;
+      line-height: 125%;
+      color: #1f1f24;
     }
 
     ul {
@@ -207,9 +222,14 @@ body {
       margin-bottom: 0;
 
       li {
-        font-size: 15px;
+        font-size: 16px;
         margin-bottom: 8px;
-        color: #666;
+        color: #858585;
+        font-weight: 500;
+        line-height: 150%;
+        &::marker {
+          font-size: 10px; // Увеличение размера точки
+        }
       }
     }
 
@@ -482,6 +502,162 @@ body {
 
     &:hover {
       background: linear-gradient(90deg, #1578d9 0%, #34aee6 100%);
+    }
+  }
+}
+/*6я СЕКЦИЯ roles*/
+.roles {
+  padding: 0px 0 100px;
+  background-color: #F7FBFF!important;
+  text-align: center;
+
+  h2 {
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 40px;
+  }
+
+  .role-table-wrapper {
+    padding: 22px;
+    background: transparent;
+    border-radius: 21px;
+    overflow: hidden;
+    border: 2px solid rgba(38, 38, 38, 0.1);
+    max-width: 795px;
+    margin: 0 auto;
+
+
+  }
+
+  .role-table {
+    width: 100%;
+    margin: 0;
+
+    thead {
+      background: transparent;
+
+      th {
+
+        padding: 18px 22px 22px;
+        text-align: left;
+        color: #000;
+        border-bottom: 1px solid rgba(38, 38, 38, 0.1);
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 80%;
+        background: transparent;
+
+      }
+    }
+
+    tbody {
+      td {
+        border-style: none;
+        padding: 18px 22px 0;
+        vertical-align: top;
+        color: #444;
+        text-align: left;
+        background: transparent;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 133%;
+        color: rgba(0, 0, 0, 0.55);
+
+        &:first-child {
+          text-align: left;
+
+          white-space: nowrap;
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 133%;
+          color: #000;
+        }
+      }
+
+      tr:last-child td {
+        border-bottom: none;
+      }
+    }
+  }
+}
+/*7я СЕКЦИЯ smart-interface*/
+.smart-interface {
+  padding: 0px;
+  background-color: #F7FBFF!important;
+  text-align: center;
+  z-index: -2;
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0px;
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: url("../img/bg-smart-interface.svg") center center no-repeat;
+  }
+
+  h2 {
+
+
+    margin-bottom: 80px;
+    font-weight: 800;
+    font-size: 50px;
+    line-height: 108%;
+
+    .gradient-text {
+      background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      color: transparent;
+    }
+  }
+
+  .smart-ui-img img {
+    max-width: 100%;
+    border-radius: 30px;
+
+  }
+
+  .smart-card {
+    position: relative;
+    z-index: 1;
+    border-radius: 23px;
+    padding: 10px 21px 21px;
+    height: 100%;
+
+    transition: 0.3s ease;
+    backdrop-filter: blur(12px);
+    background: linear-gradient(117deg, rgba(38, 173, 254, 0.1) 0%, rgba(0, 91, 229, 0.1) 100%);
+
+    &:hover {
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    }
+
+    h5 {
+      font-weight: 600;
+      font-size: 35px;
+      margin-bottom: 20px;
+      margin-top: 20px;
+      line-height: 1;
+
+      .gradient-text {
+        background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        color: transparent;
+      }
+    }
+
+
+    p {
+      font-weight: 600;
+      font-size: 15px;
+      line-height: 133%;
+      text-align: center;
+      color: #374151;
     }
   }
 }
