--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
   text-align: center;
 }
 .coverage__bg-none {
-  padding: 115px 0 114px !important;
+  padding: 115px 0 0px !important;
   background: #F7FBFF !important;
 }
 .coverage__bg-none::before {
@@ -231,12 +231,12 @@ body {
 
 /*4я СЕКЦИЯ white-label*/
 .white-label {
-  padding: 100px 0;
+  padding: 120px 0;
   background: linear-gradient(180deg, #ffffff 0%, #d7f1ff 100%);
   text-align: center;
 }
 .white-label h2 {
-  font-size: 48px;
+  font-size: 50px;
   font-weight: 800;
 }
 .white-label h2 .gradient-text {
@@ -247,6 +247,7 @@ body {
   color: transparent;
 }
 .white-label .wl-card {
+  min-height: 618px;
   border: 1px solid rgba(38, 38, 38, 0.1);
   overflow: hidden;
   padding-right: 0 !important;
@@ -305,6 +306,37 @@ body {
   margin-top: auto;
   width: 100%;
   height: auto;
+}
+
+.white-label__bg {
+  overflow: hidden;
+  padding: 80px 0 !important;
+  background: #F7FBFF !important;
+  z-index: -2;
+}
+.white-label__bg::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transform: translate(-20%, 5%);
+  background: url("../img/bg-white-label-1.svg") center center no-repeat;
+  background-size: contain;
+}
+.white-label__bg::after {
+  content: "";
+  position: absolute;
+  right: 0px;
+  bottom: 58px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transform: translate(29%, 5%);
+  background: url("../img/bg-white-label-2.svg") center right no-repeat;
+  background-size: contain;
 }
 
 /*5я СЕКЦИЯ plans*/
@@ -414,7 +446,6 @@ body {
   color: #8899bb;
 }
 .plans .btn-blue {
-  background: linear-gradient(90deg, #198CFF 0%, #46C3FF 100%);
   color: #fff;
   padding: 12px 28px;
   border-radius: 50px;
@@ -422,6 +453,8 @@ body {
   display: inline-block;
   text-decoration: none;
   transition: background 0.3s;
+  margin-top: 30px;
+  background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
 }
 .plans .btn-blue:hover {
   background: linear-gradient(90deg, #1578d9 0%, #34aee6 100%);
@@ -555,4 +588,165 @@ body {
   line-height: 133%;
   text-align: center;
   color: #374151;
+}
+
+.tech-section {
+  background-color: #F7FBFF;
+}
+.tech-section .tech-grid {
+  display: grid;
+  grid-template-columns: 0.6fr 1fr 1fr 0.6fr;
+  gap: 24px;
+}
+.tech-section .tech-grid .tech-row-bottom {
+  grid-column: 1/-1;
+  display: grid;
+  gap: 24px;
+  grid-template-columns: 1fr 1fr 0.7fr;
+}
+.tech-section .tech-card {
+  backdrop-filter: blur(12px);
+  background: linear-gradient(117deg, rgba(38, 173, 254, 0.1) 0%, rgba(0, 91, 229, 0.1) 100%);
+  border-radius: 23px;
+  padding: 20px 13px 50px;
+  text-align: center;
+  min-height: 160px;
+}
+.tech-section .tech-card h5 {
+  font-weight: 600;
+  font-size: 35px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.tech-section .tech-card h5 .gradient-text {
+  background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
+.tech-section .tech-card p {
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 1.3;
+  margin: 0;
+}
+
+.footer {
+  z-index: -2;
+  background: #F7FBFF;
+  padding: 177px 0 84px;
+  font-family: "Manrope", sans-serif;
+}
+.footer::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: url("../img/bg-footer-1.svg") bottom left no-repeat;
+  background-size: contain;
+}
+.footer::after {
+  content: "";
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: url("../img/bg-footer-2.svg") bottom right no-repeat;
+  background-size: contain;
+}
+.footer .footer-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 40px;
+}
+.footer .footer-left,
+.footer .footer-right {
+  flex: 1 1 300px;
+}
+.footer .footer-logo {
+  height: 45px;
+  width: auto;
+  margin-bottom: 92px;
+}
+.footer h3 {
+  font-weight: 800;
+  font-size: 96px;
+  line-height: 71%;
+  color: #262626;
+  margin-bottom: 50px;
+}
+.footer p {
+  font-weight: 400;
+  font-size: 24px;
+  color: #262626;
+}
+.footer .btn-blue {
+  margin-top: 73px;
+  display: inline-block;
+  color: #fff;
+  padding: 12px 28px;
+  border-radius: 50px;
+  font-weight: 600;
+  transition: background 0.3s;
+  background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
+}
+.footer .btn-blue:hover {
+  background: linear-gradient(90deg, #1578d9 0%, #34aee6 100%);
+  text-decoration: none;
+}
+.footer .footer-right h5 {
+  font-weight: 700;
+  font-size: 64px;
+  margin-bottom: 18px;
+  margin-top: -20px;
+}
+.footer .footer-right p {
+  margin-bottom: 10px;
+  color: #333;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 271%;
+}
+.footer .footer-right .footer-links a {
+  line-height: 271%;
+  font-weight: 400;
+  font-size: 24px;
+  color: rgba(38, 38, 38, 0.75);
+  text-decoration: none;
+}
+.footer .footer-right .footer-links a:hover {
+  text-decoration: underline;
+}
+.footer .text-muted {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 271%;
+  color: rgba(38, 38, 38, 0.75);
+}
+
+@media (max-width: 1301px) {
+  .tech-section .tech-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+  .tech-section .tech-grid .tech-row-bottom {
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 768px) {
+  .footer-grid {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-left,
+  .footer-right {
+    align-items: center;
+  }
 }
