--- a/style.scss
+++ b/style.scss
@@ -96,7 +96,7 @@ body {
 
   // Фоновая карта
   &__bg-none {
-    padding: 115px 0 114px!important;
+    padding: 115px 0 0px!important;
     background: #F7FBFF!important;
     &::before {
       background:transparent!important;
@@ -267,12 +267,14 @@ body {
 }
 /*4я СЕКЦИЯ white-label*/
 .white-label {
-  padding: 100px 0;
+  padding: 120px 0;
   background: linear-gradient(180deg, #ffffff 0%, #d7f1ff 100%);
   text-align: center;
 
+
+
   h2 {
-    font-size: 48px;
+    font-size: 50px;
     font-weight: 800;
 
     .gradient-text {
@@ -285,6 +287,7 @@ body {
   }
 
   .wl-card {
+    min-height: 618px;
     border: 1px solid rgba(38, 38, 38, 0.1);
     overflow: hidden;
     padding-right: 0 !important;
@@ -321,12 +324,12 @@ body {
     }
 
     .wl-icon  {
-    width: 56px;
-    height: 56px;
-    text-align: center;
-    padding: 8px;
-    border-radius: 12px;
-    display: inline-block;
+      width: 56px;
+      height: 56px;
+      text-align: center;
+      padding: 8px;
+      border-radius: 12px;
+      display: inline-block;
     }
     .wl-icon-1 {
       background:
@@ -359,6 +362,41 @@ body {
       height: auto;
     }
   }
+}
+.white-label__bg {
+  overflow: hidden;
+  padding: 80px 0!important;
+
+  background: #F7FBFF!important;
+  z-index: -2;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    transform: translate(-20%, 5%);
+    background: url("../img/bg-white-label-1.svg") center center no-repeat;
+    background-size: contain;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0px;
+    bottom: 58px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    transform: translate(29%, 5%);
+    background: url("../img/bg-white-label-2.svg") center right no-repeat;
+    background-size: contain;
+  }
+
+
 }
 
 /*5я СЕКЦИЯ plans*/
@@ -491,7 +529,7 @@ body {
   }
 
   .btn-blue {
-    background: linear-gradient(90deg, #198CFF 0%, #46C3FF 100%);
+
     color: #fff;
     padding: 12px 28px;
     border-radius: 50px;
@@ -499,6 +537,9 @@ body {
     display: inline-block;
     text-decoration: none;
     transition: background 0.3s;
+    margin-top: 30px;
+    background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
+
 
     &:hover {
       background: linear-gradient(90deg, #1578d9 0%, #34aee6 100%);
@@ -659,5 +700,212 @@ body {
       text-align: center;
       color: #374151;
     }
+  }
+}
+
+
+.tech-section {
+  background-color: #F7FBFF;
+
+
+  .tech-grid {
+    display: grid;
+    grid-template-columns: 0.6fr 1fr 1fr 0.6fr; // последняя карточка меньше
+    gap: 24px;
+
+
+
+    .tech-row-bottom {
+      grid-column: 1 / -1;
+      display: grid;
+      gap: 24px;
+      grid-template-columns: 1fr 1fr 0.7fr; // последняя карточка меньше
+    }
+  }
+
+  .tech-card {
+    backdrop-filter: blur(12px);
+    background: linear-gradient(117deg, rgba(38, 173, 254, 0.1) 0%, rgba(0, 91, 229, 0.1) 100%);
+    border-radius: 23px;
+    padding: 20px 13px 50px;
+    text-align: center;
+    min-height: 160px;
+
+    h5 {
+      font-weight: 600;
+      font-size: 35px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+
+      .gradient-text {
+        background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        color: transparent;
+      }
+    }
+
+    p {
+      font-weight: 600;
+      font-size: 15px;
+      line-height: 1.3;
+      margin: 0;
+    }
+  }
+}
+
+.footer {
+  z-index: -2;
+  background: #F7FBFF;
+  padding: 177px 0 84px;
+  font-family: 'Manrope', sans-serif;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+    background: url("../img/bg-footer-1.svg") bottom left no-repeat;
+    background-size: contain;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+    background: url("../img/bg-footer-2.svg") bottom right no-repeat;
+    background-size: contain;
+  }
+
+  .footer-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 40px;
+  }
+
+  .footer-left,
+  .footer-right {
+    flex: 1 1 300px;
+  }
+
+  .footer-logo {
+    height: 45px;
+    width: auto;
+    margin-bottom: 92px;
+
+  }
+
+  h3 {
+    font-weight: 800;
+    font-size: 96px;
+    line-height: 71%;
+    color: #262626;
+    margin-bottom: 50px;
+  }
+  p {
+    font-weight: 400;
+    font-size: 24px;
+    color:#262626;
+  }
+
+  .btn-blue {
+    margin-top: 73px;
+    display: inline-block;
+
+    color: #fff;
+    padding: 12px 28px;
+    border-radius: 50px;
+    font-weight: 600;
+    transition: background 0.3s;
+
+    background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
+
+
+    &:hover {
+      background: linear-gradient(90deg, #1578d9 0%, #34aee6 100%);
+      text-decoration: none;
+    }
+  }
+
+  .footer-right {
+    h5 {
+      font-weight: 700;
+      font-size: 64px;
+      margin-bottom: 18px;
+      margin-top: -20px;
+    }
+    p {
+      margin-bottom: 10px;
+      color: #333;
+
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 271%;
+    }
+
+    .footer-links a {
+      line-height: 271%;
+      font-weight: 400;
+      font-size: 24px;
+
+      color: rgba(38, 38, 38, 0.75);
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  .text-muted {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 271%;
+    color: rgba(38, 38, 38, 0.75);
+  }
+
+
+}
+
+
+@media (max-width: 1301px) {
+  .tech-section{
+    .tech-grid {
+
+      grid-template-columns: 1fr 1fr; // последняя карточка меньше
+
+
+
+
+      .tech-row-bottom {
+
+        grid-template-columns: 1fr ; // последняя карточка меньше
+      }
+    }
+  }
+
+}
+
+@media (max-width: 768px) {
+  .footer-grid {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .footer-left,
+  .footer-right {
+    align-items: center;
   }
 }
