--- a/style.scss
+++ b/style.scss
@@ -770,7 +770,7 @@ body {
     height: 100%;
     z-index: -1;
 
-    background: url("../img/bg-footer-1.svg") bottom left no-repeat;
+    background: url('../img/bg_footer_1.svg') bottom left no-repeat;
     background-size: contain;
   }
 
@@ -783,7 +783,7 @@ body {
     height: 100%;
     z-index: -1;
 
-    background: url("../img/bg-footer-2.svg") bottom right no-repeat;
+    background: url("../img/bg_footer_2.svg") bottom right no-repeat;
     background-size: contain;
   }
 
