--- a/style.scss
+++ b/style.scss
@@ -379,7 +379,7 @@ body {
     height: 100%;
     z-index: -1;
     transform: translate(-20%, 5%);
-    background: url("/img/bg-white-label-1.svg") center center no-repeat;
+    background: url("../../img/bg-white-label-1.svg") center center no-repeat;
     background-size: contain;
   }
 
@@ -392,7 +392,7 @@ body {
     height: 100%;
     z-index: -1;
     transform: translate(29%, 5%);
-    background: url("/img/bg-white-label-2.svg") center right no-repeat;
+    background: url("../../img/bg-white-label-2.svg") center right no-repeat;
     background-size: contain;
   }
 
@@ -783,7 +783,7 @@ body {
     height: 100%;
     z-index: -1;
 
-    background: url("/img/bg_footer_2.svg") bottom right no-repeat;
+    background: url("img/bg_footer_2.png") bottom right no-repeat;
     background-size: contain;
   }
 
