--- a/style.css
+++ b/style.css
@@ -29,6 +29,13 @@ body {
   font-weight: 800;
   font-size: 96px;
 }
+@media (max-width: 992px) {
+  .hero h1 {
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 142%;
+  }
+}
 .hero p {
   font-size: 18px;
   margin-top: 10px;
@@ -88,8 +95,9 @@ body {
   position: absolute;
   top: 0;
   left: 50%;
-  width: 1000px;
-  height: 500px;
+  max-width: 1000px;
+  width: 100%;
+  height: 100%;
   background: url("img/map-bg.png") no-repeat center top;
   background-size: contain;
   transform: translateX(-50%);
@@ -104,6 +112,13 @@ body {
   font-weight: 800;
   font-size: 50px;
   line-height: 108%;
+}
+@media (max-width: 992px) {
+  .coverage h2 {
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 100%;
+  }
 }
 .coverage h2 .text-primary {
   background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
@@ -161,6 +176,13 @@ body {
 .features h2 {
   font-size: 50px;
   font-weight: 800;
+}
+@media (max-width: 992px) {
+  .features h2 {
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 100%;
+  }
 }
 .features h2 .gradient-text {
   background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
@@ -238,6 +260,13 @@ body {
 .white-label h2 {
   font-size: 50px;
   font-weight: 800;
+}
+@media (max-width: 992px) {
+  .white-label h2 {
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 100%;
+  }
 }
 .white-label h2 .gradient-text {
   background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
@@ -323,7 +352,7 @@ body {
   height: 100%;
   z-index: -1;
   transform: translate(-20%, 5%);
-  background: url("../../img/bg-white-label-1.svg") center center no-repeat;
+  background: url("img/bg-white-label-1.png") center center no-repeat;
   background-size: contain;
 }
 .white-label__bg::after {
@@ -335,7 +364,7 @@ body {
   height: 100%;
   z-index: -1;
   transform: translate(29%, 5%);
-  background: url("../../img/bg-white-label-2.svg") center right no-repeat;
+  background: url("img/bg-white-label-2.png") center right no-repeat;
   background-size: contain;
 }
 
@@ -536,13 +565,20 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: url("/img/bg-smart-interface.svg") center center no-repeat;
+  background: url("img/bg-smart-interface.png") center center no-repeat;
 }
 .smart-interface h2 {
   margin-bottom: 80px;
   font-weight: 800;
   font-size: 50px;
   line-height: 108%;
+}
+@media (max-width: 992px) {
+  .smart-interface h2 {
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 100%;
+  }
 }
 .smart-interface h2 .gradient-text {
   background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
@@ -598,11 +634,21 @@ body {
   grid-template-columns: 0.6fr 1fr 1fr 0.6fr;
   gap: 24px;
 }
+@media (max-width: 992px) {
+  .tech-section .tech-grid {
+    gap: 12px;
+  }
+}
 .tech-section .tech-grid .tech-row-bottom {
   grid-column: 1/-1;
   display: grid;
   gap: 24px;
   grid-template-columns: 1fr 1fr 0.7fr;
+}
+@media (max-width: 992px) {
+  .tech-section .tech-grid .tech-row-bottom {
+    gap: 12px;
+  }
 }
 .tech-section .tech-card {
   backdrop-filter: blur(12px);
@@ -612,11 +658,22 @@ body {
   text-align: center;
   min-height: 160px;
 }
+@media (max-width: 992px) {
+  .tech-section .tech-card {
+    gap: 12px;
+  }
+}
 .tech-section .tech-card h5 {
   font-weight: 600;
   font-size: 35px;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+@media (max-width: 992px) {
+  .tech-section .tech-card h5 {
+    font-weight: 600;
+    font-size: 18px;
+  }
 }
 .tech-section .tech-card h5 .gradient-text {
   background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
@@ -630,6 +687,13 @@ body {
   font-size: 15px;
   line-height: 1.3;
   margin: 0;
+}
+@media (max-width: 992px) {
+  .tech-section .tech-card p {
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 120%;
+  }
 }
 
 .footer {
@@ -646,7 +710,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: url("/img/bg_footer_1.svg") bottom left no-repeat;
+  background: url("img/bg-footer-1.png") bottom left no-repeat;
   background-size: contain;
 }
 .footer::after {
@@ -657,7 +721,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: url("img/bg_footer_2.png") bottom right no-repeat;
+  background: url("img/bg-footer-2.png") bottom right no-repeat;
   background-size: contain;
 }
 .footer .footer-grid {
@@ -681,6 +745,13 @@ body {
   line-height: 71%;
   color: #262626;
   margin-bottom: 50px;
+}
+@media (max-width: 992px) {
+  .footer h3 {
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 142%;
+  }
 }
 .footer p {
   font-weight: 400;
