--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 // Шрифты и переменные
+
 $font-main: 'Manrope', sans-serif;
 $color-primary: #198CFF;
 $color-primary-hover: #006cd9;
@@ -37,6 +38,11 @@ body {
   h1 {
     font-weight: 800;
     font-size: 96px;
+    @media (max-width: 992px) {
+      font-weight: 800;
+      font-size: 48px;
+      line-height: 142%;
+    }
   }
 
   p {
@@ -107,8 +113,9 @@ body {
     position: absolute;
     top: 0;
     left: 50%;
-    width: 1000px;
-    height: 500px;
+    max-width: 1000px;
+    width: 100%;
+    height: 100%;
     background: url("img/map-bg.png") no-repeat center top;
     background-size: contain;
     transform: translateX(-50%);
@@ -125,6 +132,11 @@ body {
     font-weight: 800;
     font-size: 50px;
     line-height: 108%;
+    @media (max-width: 992px) {
+      font-weight: 800;
+      font-size: 24px;
+      line-height: 100%;
+    }
 
     .text-primary {
       background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
@@ -187,6 +199,11 @@ body {
   h2 {
     font-size: 50px;
     font-weight: 800;
+    @media (max-width: 992px) {
+      font-weight: 800;
+      font-size: 24px;
+      line-height: 100%;
+    }
 
     .gradient-text {
       background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
@@ -276,6 +293,11 @@ body {
   h2 {
     font-size: 50px;
     font-weight: 800;
+    @media (max-width: 992px) {
+      font-weight: 800;
+      font-size: 24px;
+      line-height: 100%;
+    }
 
     .gradient-text {
       background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
@@ -334,7 +356,7 @@ body {
     .wl-icon-1 {
       background:
               linear-gradient(133deg, #ffb196 0%, #ff4424 66.92%),
-              rgba(178, 126, 237, 0.15),;
+              rgba(178, 126, 237, 0.15);
     }
     .wl-icon-2 {
       background:
@@ -379,7 +401,7 @@ body {
     height: 100%;
     z-index: -1;
     transform: translate(-20%, 5%);
-    background: url("../../img/bg-white-label-1.svg") center center no-repeat;
+    background: url("img/bg-white-label-1.png") center center no-repeat;
     background-size: contain;
   }
 
@@ -392,7 +414,7 @@ body {
     height: 100%;
     z-index: -1;
     transform: translate(29%, 5%);
-    background: url("../../img/bg-white-label-2.svg") center right no-repeat;
+    background: url("img/bg-white-label-2.png") center right no-repeat;
     background-size: contain;
   }
 
@@ -635,7 +657,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-    background: url("/img/bg-smart-interface.svg") center center no-repeat;
+    background: url("img/bg-smart-interface.png") center center no-repeat;
   }
 
   h2 {
@@ -645,6 +667,11 @@ body {
     font-weight: 800;
     font-size: 50px;
     line-height: 108%;
+    @media (max-width: 992px) {
+      font-weight: 800;
+      font-size: 24px;
+      line-height: 100%;
+    }
 
     .gradient-text {
       background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
@@ -712,6 +739,9 @@ body {
     display: grid;
     grid-template-columns: 0.6fr 1fr 1fr 0.6fr; // последняя карточка меньше
     gap: 24px;
+    @media (max-width: 992px) {
+      gap: 12px;
+    }
 
 
 
@@ -720,6 +750,9 @@ body {
       display: grid;
       gap: 24px;
       grid-template-columns: 1fr 1fr 0.7fr; // последняя карточка меньше
+      @media (max-width: 992px) {
+        gap: 12px;
+      }
     }
   }
 
@@ -730,12 +763,23 @@ body {
     padding: 20px 13px 50px;
     text-align: center;
     min-height: 160px;
+    @media (max-width: 992px) {
+      border-radius: 10px;
+      padding: 0px 13px 20px;
+      text-align: center;
+      min-height: 100px;
+    }
+
 
     h5 {
       font-weight: 600;
       font-size: 35px;
       margin-top: 20px;
       margin-bottom: 20px;
+      @media (max-width: 992px) {
+        font-weight: 600;
+        font-size: 18px;
+      }
 
       .gradient-text {
         background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
@@ -751,6 +795,11 @@ body {
       font-size: 15px;
       line-height: 1.3;
       margin: 0;
+      @media (max-width: 992px) {
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 120%;
+      }
     }
   }
 }
@@ -770,7 +819,7 @@ body {
     height: 100%;
     z-index: -1;
 
-    background: url('/img/bg_footer_1.svg') bottom left no-repeat;
+    background: url('img/bg-footer-1.png') bottom left no-repeat;
     background-size: contain;
   }
 
@@ -783,7 +832,7 @@ body {
     height: 100%;
     z-index: -1;
 
-    background: url("img/bg_footer_2.png") bottom right no-repeat;
+    background: url("img/bg-footer-2.png") bottom right no-repeat;
     background-size: contain;
   }
 
@@ -812,6 +861,11 @@ body {
     line-height: 71%;
     color: #262626;
     margin-bottom: 50px;
+    @media (max-width: 992px) {
+      font-weight: 800;
+      font-size: 48px;
+      line-height: 142%;
+    }
   }
   p {
     font-weight: 400;
