--- a/style.css
+++ b/style.css
@@ -660,7 +660,10 @@ body {
 }
 @media (max-width: 992px) {
   .tech-section .tech-card {
-    gap: 12px;
+    border-radius: 10px;
+    padding: 0px 13px 20px;
+    text-align: center;
+    min-height: 100px;
   }
 }
 .tech-section .tech-card h5 {
